2001-04-22  Georg Fleischmann

	* gui/Source/GSTextStorage.m:
	([GSTextStorage.m replaceCharactersInRange:withString:])
	recalculate effective range after removing attributes.

2001-04-23  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSColor.m: 
	[initialize] call [NSUserDefaults standardUserDefaults] as a
	workaround for the setlocal() problem. Otherwise colorFromString:
	will fail later on for the system colours.
	* Source/NSColorPanel.m: 
	Added an [init] method, use this in [sharedColorPanel]. Replaced
	reference to GMModel, with more general call on NSBundle. (This is
	commented out, but some time in the futur we might use NIB files)
	* Source/NSFontPanel.m: 
	Also replaced GMModel with NSBundle in [init].
	
2001-04-22  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSColorList.m: ([_loadAvailableColorLists]) Fixed bug causing
	system color list to not be loaded ... was using == for NSString
	comparison where isEqual was needed.
	Also reformatted to conform to coding standards.
	* Source/NSColor.m: ([defaultsDidChange:]) Fixed to record plist	
	defaults values as strings ... so colorFromString works to set system
	colors.

2001-04-18  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSServicesManager.m: Save the name of the port on which we
	register services, and use it when we are looking for a service to
	see if we can handle it ourself.  Should make it possible for an
	application to provide services to itsself.
	Also tidied to use memory management macros.

Wed Apr 18 00:14:33 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Model/IMConnectors.m: Use #import rather than #include.
	([IMControlConnector -establishConnection]): Do not retain target
	when setting it directly.

2001-04-18  Georg Fleischmann <georg@vhf.de>

	* Model/IMConnectors.m ([IMOutletConnector
	-establishConnection:]): Do not retain destination when setting it
	directly.

2001-04-16  Adam Fedor  <fedor@gnu.org>
